# npir

./: Cargo.toml  README.md  build.rs  readme.md
src/: aligned_memory.rs  arith.rs  discrete_gaussian.rs  invmod.cpp  lib.rs  npir.rs  npirbatch.rs  npirstandard.rs  ntrupacking.rs  ntrurp.rs  ntt.rs  params.rs  poly.rs  util.rs
