[package]
name = "npir"
version = "0.3.0"
edition = "2021"
build = "build.rs"


[build-dependencies]
cc = "1.0"


[dependencies]
libc = "0.2"
log = "0.4"
rayon = "1.6.1"
getrandom = { features = ["js"], version = "0.2.8" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0"
rand_chacha = "0.3.1"
sha2 = "0.10"
subtle = "2.4"
fastrand = "2.0.1"
bindgen = "0.70.1"
dunce = "1.0.5"
arrayref = "0.3"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
lto = true
codegen-units = 1